--- a/ppmcpe.css
+++ b/ppmcpe.css
@@ -63,11 +63,11 @@ body {
     cursor: pointer;
     font-size: 1.8em;
     padding: 0.3em 0.75em;
-    transition: background 0.6s, color 0.6s, border 0.6s;
+    transition: background 0.8s, color 0.8s, border 0.8s;
 	border-radius: 2px;
 }
 #vote_btn:hover {
-    background: #33ee33;
+    background: transparent;
     color: #fefefe;
 	border: solid 2px white;
 }
