--- a/404.css
+++ b/404.css
@@ -41,6 +41,9 @@ body {
 .green_l:hover {
 	color: #33ee33;
 }
+.33ee33 {
+	color: #33ee33;
+}
 #that_error_div {
 	margin-top: -3em;
 	margin-bottom: -1.75em;
