--- a/404.css
+++ b/404.css
@@ -41,8 +41,8 @@ body {
 .green_l:hover {
 	color: #33ee33;
 }
-.33ee33 {
-	color: #33ee33;
+.5555ff {
+	color: #5555ff;
 }
 #that_error_div {
 	margin-top: -3em;
