--- a/ppmcpe.css
+++ b/ppmcpe.css
@@ -63,13 +63,12 @@ body {
     cursor: pointer;
     font-size: 1.8em;
     padding: 0.3em 0.75em;
-    transition: background 0.8s, color 0.8s, border 0.8s;
+    transition: color 1s;
 	border-radius: 2px;
 }
 #vote_btn:hover {
-    background: transparent;
     color: #fefefe;
-	border: solid 2px white;
+	border: solid 2px #55ff55;
 }
 #footer {
 	background: transparent;
