--- a/404/404.css
+++ b/404/404.css
@@ -1,3 +1,15 @@
+#title_div {
+	margin-top: 8.5em;
+	margin-bottom: -1.75em;
+	margin-left: auto;
+	margin-right: auto;
+}
+#title_h1 {
+	font-size: 3.5em;
+	font-variant: small-caps;
+	text-align: center;
+	font-weight: 900;
+}
 html, body {
 	margin: 0;
 	padding: 0;
